crates/pgls_pretty_print/tests/snapshots/multi/tests__comments_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/comments_100.sql
snapshot_kind: text
---
SELECT 'trailing' AS first;

SELECT 'embedded' AS second;

SELECT 'both' AS third;

SELECT 'before multi-line' AS fourth;

SELECT 'after multi-line' AS fifth;

SELECT 'deeply nested example' AS sixth;
